<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <ImageView
            android:id="@+id/toolbar_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            app:srcCompat="@drawable/ic_arrow_back_black_24dp"
            android:contentDescription="@string/toolbar_content_desc_img"
            />
        <TextView
            android:id="@+id/toolbar_title_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/century_gothic"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="end">
                   <Button
                    android:id="@+id/toolbar_save_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/century_gothic"
                    android:text="@string/toolbar_send_btn"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:background="@drawable/toolbar_button_selector"
                    />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?android:actionBarSize">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/quejas_mensaje_nuevo_title_contraint_top"
                android:fontFamily="@font/altair_thin"
                android:text="@string/quejas_nuevo_mensaje_title"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/quejas_mensaje_nuevo_title_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/frame_layout_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/quejas_mensaje_nuevo_general_edit_text_contraint_start_end"
                android:layout_marginStart="@dimen/quejas_mensaje_nuevo_general_edit_text_contraint_start_end"
                android:layout_marginTop="@dimen/quejas_mensaje_nuevo_first_edit_text_contraint_top"
                android:background="@drawable/edit_text_shape_input"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView18">

                <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
                    android:id="@+id/quejas_funcionario_autocomplete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/century_gothic"
                    android:hint="@string/quejas_nuevo_mensaje_nombre_del_funcionario"
                    app:met_floatingLabel="highlight" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/frame_layout_asunto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/quejas_mensaje_nuevo_general_edit_text_contraint_start_end"
                android:layout_marginStart="@dimen/quejas_mensaje_nuevo_general_edit_text_contraint_start_end"
                android:layout_marginTop="@dimen/quejas_mensaje_nuevo_general_edit_text_contriant_top"
                android:background="@drawable/edit_text_shape_input"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.52"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frame_layout_spinner">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/century_gothic"
                    android:hint="@string/quejas_nuevo_mensaje_hint_asunto"
                    app:met_floatingLabel="highlight" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_marginEnd="@dimen/quejas_mensaje_nuevo_general_edit_text_contraint_start_end"
                android:layout_marginStart="@dimen/quejas_mensaje_nuevo_general_edit_text_contraint_start_end"
                android:layout_marginTop="@dimen/quejas_mensaje_nuevo_general_edit_text_contriant_top"
                android:background="@drawable/edit_text_shape_input"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frame_layout_asunto">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/century_gothic"
                    android:gravity="top"
                    android:hint="@string/quejas_nuevo_mensaje_hint_mensaje"
                    android:inputType="textMultiLine"
                    android:maxLines="10"
                    android:minLines="3"
                    app:met_floatingLabel="highlight" />
            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>