<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <ImageView
            android:id="@+id/toolbar_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            app:srcCompat="@drawable/ic_arrow_back_black_24dp"
            android:contentDescription="@string/toolbar_content_desc_img"
            />
        <TextView
            android:id="@+id/custom_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/orator_std"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <!--<RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="end">-->

            <ImageView
                android:id="@+id/toolbar_search_button"
                android:contentDescription="@string/toolbar_search_description"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:scaleType="centerCrop"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_nav_lupa" />
            <!--</RelativeLayout>-->
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
    <fragment
        android:id="@+id/frg_main_list_act"
        android:tag="Tag_lista_local"
        android:name="com.fiscaliageneralags.fiscalia.Activities.TodosListaAgencias"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?android:actionBarSize">
    </fragment>

</androidx.constraintlayout.widget.ConstraintLayout>