<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/buzon_fiscal_card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/buzon_fiscal_card_margin">

            <TextView
                android:id="@+id/lista_negra_card_view_text_activo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buzon_fiscal_card_view_tipo"
                android:textAlignment="center"
                android:textSize="@dimen/buzon_fiscal_card_text_size_small"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/buzon_fiscal_card_view_text_asunto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/century_gothic"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/buzon_fiscal_card_text_size_normal"
                app:layout_constraintBottom_toTopOf="@+id/buzon_fiscal_card_view_text_fecha"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lista_negra_card_view_text_activo" />

            <TextView
                android:layout_marginStart="3dp"
                android:id="@+id/buzon_fiscal_card_view_text_fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/buzon_fiscal_card_text_size_small"
                android:text="@string/buzon_fiscal_card_view_fecha"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_marginEnd="3dp"
                android:id="@+id/buzon_fiscal_card_view_text_estado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/buzon_fiscal_card_text_size_small"
                android:text="@string/buzon_fiscal_card_view_estado"
                android:textAlignment="textEnd"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>