<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/toolbar_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/toolbar_content_desc_img"
            app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

        <TextView
        android:id="@+id/custom_toolbar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:fontFamily="@font/orator_std"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="end">
            <!--<RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="end">-->
            <Button
                android:id="@+id/toolbar_select_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/toolbar_button_selector"
                android:fontFamily="@font/century_gothic"
                android:text="@string/toolbar_select_btn"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <!--</RelativeLayout>-->
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?android:actionBarSize">

        <fragment
            android:id="@+id/evidencia_anonima_main_map_view"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/contraint_layout_direction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--<com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/materialEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/century_gothic"
            android:gravity="top"
            android:hint="Narración de los hechos"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:minLines="3"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:met_floatingLabel="highlight" />-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contraint_layout_direction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <FrameLayout
                android:id="@+id/frameLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/display_text_shape_input"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/evidencia_anonima_direccion_selecionada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxHeight="60dp"
                    android:text=""
                    android:textSize="18sp" />
            </FrameLayout>

            <TextView
                android:id="@+id/direccion_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/evidencia_anonima_main_direccion"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintBottom_toTopOf="@+id/frameLayout2"
                app:layout_constraintStart_toStartOf="@+id/frameLayout2"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>